input-pill: Fix vertically-misaligned PM compose pills.
Fixes #8775.

--- a/static/styles/input_pill.css
+++ b/static/styles/input_pill.css
@@ -74,6 +74,9 @@
     margin: -1px 0px;
 
     border: none;
+
+    display: flex;
+    align-content: center;
 }
 
 .pm_recipient .pill-container .input {
